--- a/static/aster-demo.css
+++ b/static/aster-demo.css
@@ -12,19 +12,41 @@
     border: 1px solid;
 }
 
-.aster-color {
+.aster-btn {
     color: #ff006c;
     border-color: #ff006c;
+}
+
+.aster-btn:not(:disabled):not(.disabled):active {
+    color: #ff006c;
+    border-color: #ff006c;
+}
+
+.aster-btn:hover {
+    background-color: #ff006c;
+    border-color: #ff006c;
+}
+
+.aster-btn:focus {
+    box-shadow: none;
+}
+
+.aster-color-text {
+   color: #ff006c;
+}
+
+.close {
+    color: #e9ecef;
+}
+
+.aster-theme-modal-content {
+    background-color: #212529;
+    border-color: #e9ecef;
 }
 
 .btn-holder {
     position: absolute;
     bottom: 0;
-}
-
-.aster-color:hover {
-    background-color: #ff006c;
-    border-color: #ff006c;
 }
 
 .tagline-demo {
