--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,8 @@
 
     <!-- Social media redirection -->
     <div class="social-links">
-        <a class="navbar-brand" href="/"><img src="static/images/logo-aster.png" width="30" height="30" class="d-inline-block align-center" alt="Logo Aster"> AsTeR</a>
+        <a class="navbar-brand" href="/"><img src="/static/images/logo-aster.png" width="30" height="30"
+                                              class="d-inline-block align-center" alt="Logo Aster"> AsTeR</a>
         <a href="https://github.com/Project-AsTeR" target="_blank"><i class="fa fa-github"></i></a>
     </div>
 
@@ -18,6 +19,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/press">Press</a></li>
+                <li><a href="/demo">Demo</a></li>
             </ul> 
         </nav>
 
