--- a/static/aster-demo.css
+++ b/static/aster-demo.css
@@ -32,7 +32,7 @@
 }
 
 .aster-color-text {
-   color: #ff006c;
+    color: #ff006c;
 }
 
 .close {
@@ -87,4 +87,22 @@
     font-size: 1.5rem;
     text-decoration: underline;
     text-decoration-color: #ff006c;
+}
+
+.table thead th{
+    vertical-align: middle;
+}
+
+thead {
+  overflow-y: scroll;
+}
+
+thead.tr {
+  display: block;
+}
+
+div.table-container {
+    width: 100%;
+    max-height: calc(100vh - 65px);
+    overflow: auto;
 }
