--- a/templates/demo.html
+++ b/templates/demo.html
@@ -115,19 +115,21 @@
                                     </form>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn aster-btn btn-outline-success btn-block mt-auto activated"
-                                            data-dismiss="modal">Close</button>
+                                    <button type="button" id="close-demo" class="btn aster-btn btn-outline-success
+                                            btn-block mt-auto activated" data-dismiss="modal">Close</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
+
             <div class="col demo-feature-with-border">
                 <div id= 'map'></div>
                 <script type="text/javascript">
                     var map_parameters = {{ map_parameters|tojson|safe }};
+                    {#var call_history = {{ call_history|tojson|safe }};#}
+                    var last_response = last_response;
                 </script>
                 <script type="text/javascript" src="/static/includes/aster-map.js"></script>
                 <script async defer src="https://maps.googleapis.com/maps/api/js?key={{google_key}}&callback=initMap&language=en"></script>
@@ -135,6 +137,16 @@
             </div>
             <div class="demo-feature col-3">
                 <h1 class="text-center calls">Incoming calls</h1>
+                <div class="table-container">
+                    <table class="table table-striped table-dark text-center" data-url="{{ call_history|tojson|safe }}" id="call_log">
+                        <thead>
+                        <tr>
+                            <th data-field="phone_number" scope="col">Phone number</th>
+                            <th data-sortable="true" data-field="score" scope="col">Priority</th>
+                        </tr>
+                        </thead>
+                    </table>
+                </div>
             </div>
         </div>
     </main>
@@ -146,23 +158,64 @@
         var $score = document.getElementById('display-score');
         var $class = document.getElementById('display-class');
 
+        var last_response;
+        var fetchInterval;
+
+        function return_index(table, current_priority) {
+            var rows, i, x;
+            rows = table.rows;
+            for (i = 1; i < (rows.length - 1); i++) {
+                x = rows[i].getElementsByTagName("TD")[1];
+                if (Number(x.innerHTML) < current_priority) {
+                    return i
+                }
+            }
+            return i
+        }
+
+        function update_call_log(table, call) {
+            const index = return_index(table, call.priority);
+            let row = table.insertRow(index);
+            let cell1 = row.insertCell(0);
+            let cell2 = row.insertCell(1);
+            cell1.innerHTML = call.phone_number;
+            cell2.innerHTML = call.priority;
+        }
+
         document.getElementById('start-demo').addEventListener('click', function(event){
             var phone_number = document.getElementById("phone-number-input").value;
 
             function update_fields() {
                 $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
-                $.getJSON($SCRIPT_ROOT+"/fetch_data?phone_number="+phone_number, function(response) {
-                    $message.innerHTML = response.message;
-                    $location.innerHTML = response.location;
-                    $score.innerHTML = response.score;
-                    $class.innerHTML = response.class;
+                $.getJSON($SCRIPT_ROOT+"/fetch_call_data?phone_number="+phone_number, function(response) {
+                    last_response = response;
+                    $message.innerHTML = response.text;
+                    $location.innerHTML = "(" + response.latitude + ", " + response.longitude + ")";
+                    $score.innerHTML = response.priority;
+                    $class.innerHTML = response.keywords;
                 });
             }
 
-            var fetchInterval = setInterval(update_fields, 500);
-            setTimeout(function stopSimulation() {clearInterval(fetchInterval)}, 30000);
+            fetchInterval = setInterval(update_fields, 500); // fetches new chunks every half a second
+            setTimeout(function stopSimulation() {clearInterval(fetchInterval)}, 30000); // stops automatically after
+            // 30 seconds
 
         }, false);
+
+        document.getElementById('close-demo').addEventListener('click', function(event){
+            clearInterval(fetchInterval);
+
+            update_call_log(document.getElementById("call_log"), last_response);
+
+            {#var call_log = {{ call_history|tojson|safe }};#}
+            {#var phone_number = document.getElementById("phone-number-input").value;#}
+            {#var call_log = document.getElementById("call_log");#}
+
+            {#update_markers(call_log);#}
+            {#update_call_log(call_log, phone_number);#}
+
+        }, false);
+
     </script>
 
 {% endblock %}
