--- a/static/aster-demo.css
+++ b/static/aster-demo.css
@@ -1,4 +1,5 @@
 .demo-feature {
+    text-align: justify;
     border-radius: 5px;
     max-height: 65vh;
     color: #e9ecef;
@@ -6,7 +7,9 @@
 
 .demo-feature-with-border {
     border-radius: 5px;
-    max-height: 65vh;
+    max-height: 75vh;
+    max-width: 70vw;
+    margin-right: 3vw;
     color: #e9ecef;
     padding: 0;
     border: 1px solid;
@@ -45,7 +48,7 @@
 }
 
 .btn-holder {
-    position: absolute;
+    position: relative;
     bottom: 0;
 }
 
@@ -85,8 +88,6 @@
 
 .calls {
     font-size: 1.5rem;
-    text-decoration: underline;
-    text-decoration-color: #ff006c;
 }
 
 .table thead th{
@@ -104,5 +105,22 @@ thead.tr {
 div.table-container {
     width: 100%;
     max-height: calc(100vh - 65px);
-    overflow: auto;
+    overflow: hidden;
+}
+
+.modal-body {
+    vertical-align: top;
+    display: inline-block;
+}
+
+.modal-content {
+    display: inline-block;
+}
+
+.modal-dialog {
+    max-width: 90vw;
+}
+
+.col-4 {
+    max-width: 33%;
 }
