Improved responsivity and added collapsible for demo description

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
 
     <!-- Defines website meta-data -->
     <meta charset="UTF-8">
-    <meta name="author" content="Meryll Dindin"/>
+    <meta name="author" content="Meryll Dindin, Oskar Radermecker"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Social media taggs -->
