--- a/templates/demo.html
+++ b/templates/demo.html
@@ -23,35 +23,14 @@
             </div>
 
             <div class="demo-feature col-3 align-top row">
-                {#                <text>#}
-                {#                    This is a simplified version of the dashboard that will be presented to call centers.#}
-                {#                    <br>#}
-                {#                    <br>#}
-                {#                    An interactive map displays the most recent calls. The priority scores and classes are displayed#}
-                {#                    on the right. This helps operators focus their efforts on those calls which require immediate#}
-                {#                    attention. The demo only shows post-processed calls, so the rendering may be incremental.#}
-                {#                </text>#}
-                <button type="button" class="collapsible" data-toggle="collapse"
-                        data-target="#collapsible-explanations" aria-expanded="true"
-                        aria-controls="collapsible-explanations"
-                >Explanations</button>
-                <div id="collapsible-explanations" class="explanations collapse show">
-                    <text>
-                        This is a simplified version of the dashboard that will be presented to call centers.
-                        <br>
-                        <br>
-                        An interactive map displays the most recent calls. The priority scores and classes are displayed
-                        on the right. This helps operators focus their efforts on those calls which require immediate
-                        attention. The demo only shows post-processed calls, so the rendering may be incremental.
-                    </text>
-                </div>
 
                 <div class="btn-holder text-center" style="width: 80%">
 
                     <!-- Button trigger modal -->
                     <button type="button" class="btn aster-btn aster-btn-margin btn-outline-success btn-block
-                    activated"
-                            data-loading-text="Try me!" data-toggle="modal" data-target="#startDemo">Try me!</button>
+                    activated" data-loading-text="Try me!" data-toggle="modal" data-target="#startDemo">
+                        Try Me
+                    </button>
 
                     <!-- Modal Phone Number-->
                     <div class="modal fade" id="startDemo" tabindex="-1" role="dialog" aria-labelledby="startDemo" aria-hidden="true">
@@ -240,9 +219,38 @@
                     </div>
                 </div>
 
-                <h1 class="text-center calls">Incoming calls</h1>
+                <button type="button" class="collapsible" data-toggle="collapse"
+                        data-target="#collapsible-explanations" aria-expanded="true"
+                        aria-controls="collapsible-explanations">
+                        <i class="fa fa-chevron-down" style="margin-right: 2vw;"></i>
+                        Read Me
+                        <i class="fa fa-chevron-down" style="margin-left: 2vw;"></i>
+                </button>
+                <div id="collapsible-explanations" class="explanations collapse">
+                    <text>
+                        This is a simplified version of the dashboard that will be presented to call centers.
+                        <br>
+                        <br>
+                        An interactive map displays the most recent calls. The priority scores and classes are displayed
+                        on the right. This helps operators focus their efforts on those calls which require immediate
+                        attention. The demo only shows post-processed calls, so the rendering may be incremental.
+                        <br>
+                        <br>
+                        Click on the button above to start!
+                    </text>
+                </div>
+
+                <div class="table-container" style="margin-top: 0.25vh;">
+                    <table class="table table-bottom-margin table-striped table-dark text-center">
+                        <thead>
+                        <tr>
+                            <th scope="col"><u>Received Calls</u></th>
+                        </tr>
+                        </thead>
+                    </table>
+                </div>
                 <div class="table-container">
-                    <table class="table table-striped table-dark text-center" id="call_log">
+                    <table class="table table-bottom-margin table-striped table-dark text-center" id="call_log">
                         <thead>
                         <tr>
                             <th scope="col">Phone number</th>
