--- a/templates/demo.html
+++ b/templates/demo.html
@@ -226,7 +226,7 @@
                         Read Me
                         <i class="fa fa-chevron-down" style="margin-left: 2vw;"></i>
                 </button>
-                <div id="collapsible-explanations" class="explanations collapse">
+                <div id="collapsible-explanations" class="explanations collapse show">
                     <text>
                         This is a simplified version of the dashboard that will be presented to call centers.
                         <br>
@@ -244,7 +244,7 @@
                     <table class="table table-bottom-margin table-striped table-dark text-center">
                         <thead>
                         <tr>
-                            <th scope="col"><u>Received Calls</u></th>
+                            <th scope="col"><b>Received Calls</b></th>
                         </tr>
                         </thead>
                     </table>
